[package]
name = "rivia-vfs"
version = "0.1.3"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Ergonomic facade for the Rivia Virtual FileSystem"
repository = "https://github.com/phR0ze/rivia-vfs"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
lazy_static = "1.4"
rivia = "0.1"
