[package]
name = "rivia-vfs"
version = "0.2.4"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Ergonomic facade for the Rivia Virtual FileSystem"
repository = "https://github.com/phR0ze/rivia-vfs"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher
strip = true    # Remove all extra info

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
lazy_static = "1.4"
rivia = "0.2.5"
